--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,6 @@ compile_commands.json
 
 # Eclipse generated file for annotation processors
 .factorypath
+
+src/main/java/src/robot/RobotConstants.java
+
